add left and right remove and restore buttons that don't do anything yet

--- a/src/dimedout.css
+++ b/src/dimedout.css
@@ -35,18 +35,18 @@ ul#thumbs {
 ul#thumbs > li {
   overflow: hidden;
   position: relative;
-  /* padding and margin so the selected border does not appear to move the element */
-  padding: 3px;
+
   margin: -3px;
+  padding: 3px;
 }
 
 ul#thumbs > li.selected {
-  padding: 0;
   border: 3px solid green;
-  z-index: 999; /* make sure the border shows above neighbors */
+  padding: 0;
+  z-index: 999;
 }
 
-img {
+ul#thumbs > li > img {
   display: block;
 }
 
@@ -72,7 +72,19 @@ ul#thumbs > li.selected > #thumbctrl {
   margin-top: -1em;
 }
 
-#thumbctrl > span > span {
+#thumbctrl > span > span.neighbor {
+  background-color: transparent;
+  border: 0;
+  transition: none;
+  display: inline-flex;
+  flex-flow: column nowrap;
+}
+
+#thumbctrl > span > span.neighbor > span {
+  padding: 0 0.5em 0 0.5em;
+}
+
+#thumbctrl > span span {
   display: inline;
   font-weight: bold;
   margin: auto;
@@ -83,9 +95,14 @@ ul#thumbs > li.selected > #thumbctrl {
   transition: background-color 0.3s;
 }
 
-#thumbctrl > span > span:hover {
+#thumbctrl > span > span:hover, #thumbctrl > span > span.neighbor > span:hover {
   background-color: powderblue;
   cursor: pointer;
+}
+
+#thumbctrl > span > span.neighbor:hover {
+  background-color: transparent;
+  cursor: default;
 }
 
 #thumbctrl > span > span.sel {
